--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "^3.3.3",
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "daisyui": "^4.4.20"
   }
 }
