--- a/package.json
+++ b/package.json
@@ -4,20 +4,31 @@
   "private": true,
   "dependencies": {
     "@react-pdf/renderer": "^3.3.8",
+    "@rpldy/mock-sender": "^1.8.1",
+    "@rpldy/upload-button": "^1.8.1",
+    "@rpldy/upload-preview": "^1.8.1",
+    "@rpldy/uploady": "^1.8.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv-keywords": "^5.1.0",
     "autoprefixer": "^10.4.16",
     "flowbite-react": "^0.6.4",
     "jspdf": "^2.5.1",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.0.7",
+    "react-image-crop": "^11.0.5",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
+    "schema-utils": "^4.2.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
+    "styled-components": "^6.1.11",
     "tailwindcss": "^3.3.3",
+    "terser-webpack-plugin": "^5.3.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
