--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@floating-ui/react-dom": "^2.1.1",
     "@react-pdf/renderer": "^3.3.8",
     "@rpldy/mock-sender": "^1.8.1",
     "@rpldy/upload-button": "^1.8.1",
@@ -13,10 +14,13 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv-keywords": "^5.1.0",
     "autoprefixer": "^10.4.16",
+    "date-fns": "^3.6.0",
     "flowbite-react": "^0.6.4",
+    "font-awesome-icons": "^1.6.0",
     "jspdf": "^2.5.1",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-datepicker": "^7.2.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.7",
     "react-image-crop": "^11.0.5",
@@ -27,6 +31,7 @@
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.1.11",
+    "tailwind-datepicker-react": "^1.4.3",
     "tailwindcss": "^3.3.3",
     "terser-webpack-plugin": "^5.3.10",
     "web-vitals": "^2.1.4"
