--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "flowbite-react": "^0.6.4",
     "font-awesome-icons": "^1.6.0",
     "jspdf": "^2.5.1",
+    "moment-timezone": "^0.5.45",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-datepicker": "^7.2.0",
